samples/_failures_safe/1761042359_4a77aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8adc588f.c: In function ‘free_graph’:
./samples/SAFE/__tmp_8adc588f.c:167:5: error: expected declaration or statement at end of input
  167 |     free(graph);
      |     ^~~~
